.provarCaches/00D6C0000000xA6UAI/objects/zConversion__c.object
<CustomObject>
    <fields>
        <fullName>Parameter1__c</fullName>
        <description>Parameter 1</description>
        <label>Parameter1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter2__c</fullName>
        <label>Parameter2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Name used to trigger type of flow</description>
        <label>Type</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>zConversion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processed__c</columns>
        <columns>Parameter1__c</columns>
        <columns>Parameter2__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Z-{00000}</displayFormat>
        <label>zConversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zConversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>